Fix dark mode for Conpherence Persistent Chat menu
Summary:
Replace hardcoded `background` color with variable `{$page.content}` because `.phuix-dropdown-menu` also defines `background: {$page.content}`.

Refs T15056

Test Plan:
* Go http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Join some Conpherence room
* In the top bar, click the speech bubbles icon and enable "Persistent Chat"
* In the Conpherence overlay in the bottom right corner, click the "cogs" button and see the menu

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26137

--- a/webroot/rsrc/css/application/base/main-menu-view.css
+++ b/webroot/rsrc/css/application/base/main-menu-view.css
@@ -518,7 +518,7 @@ a.phabricator-core-user-menu .caret:before {
 
 .phabricator-main-menu-dropdown.phui-list-sidenav {
   position: absolute;
-  background: #fff;
+  background: {$page.content};
   top: 42px;
   padding: 6px 0;
   margin: 0 20px 0 0;
